Commented some stuff, fixed login detection

--- a/static/ajax.html
+++ b/static/ajax.html
@@ -14,7 +14,7 @@
         <div id="headarea">
             <div id="headarea_inner">
                 <div id="headarea_right">
-                    Logged in as <span id="login_area"></span>
+                    Logged in as <span id="login_area"></span> | <a href="/logout">Log out</a>
                 </div>
                 <div id="headarea_left">
                     Redbrick VM System
