Added user/group abilities (roles) support, added client side pubsub event bus

--- a/static/ajax.html
+++ b/static/ajax.html
@@ -5,6 +5,7 @@
         <link href="/static/jquery-ui/jquery-ui-1.8.16.custom.css" rel="stylesheet" type="text/css">
         <link href="/static/global.css" rel="stylesheet" type="text/css">
         
+        <script type="text/javascript" src="/static/js/eventbus.js"></script>
         <script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
         <script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
         
